--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.4"
+    "mongoose": "^7.0.4",
+    "mysql2": "^3.2.4",
+    "sequelize": "^6.31.0"
   }
 }
