--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "csv-parser": "^3.0.0",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-validator": "^7.0.1",
     "mongoose": "^7.0.4",
     "mysql2": "^3.2.4",
